--- a/main.html
+++ b/main.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Prodigy Infotech | Portfolio</title>
+    <title>Personal Portfolio Page</title>
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.8/css/line.css">
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
     <video autoplay muted plays-inline loop infinte class="back-video">
-        <source src="images/bg-video.mp4" type="video/mp4">
+        <source src="images/bgvideo.mp4" type="video/mp4">
     </video>
     <div class="container">
         
@@ -21,8 +21,8 @@
                     <img src="images/hero-image.png" alt="">
                 </div>
                 <div class="hero-title">
-                    <h2>Nikhil</h2>
-                    <p>Web Developer at <b>Prodigy Infotech</b></p>
+                    <h2>Bibin John</h2>
+                    <p>Vice President - <b>IT Students Association</b></p>
                     <br>
                    <ul class="links">
                     <li><a href="#"><i class="uil uil-instagram"></i></a></li>
@@ -35,9 +35,9 @@
             <div class="hero-content">
                 <h2 class="title">About</h2>
                 <p class="text">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique ducimus.
+                    Software Developer, Cloud Enthusiast.
                     <br>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci quis et labore sint nihil blanditiis commodi facere ducimus pariatur Lorem ipsum dolor sit amet 
+                    Hard-working, consistent in carrying out any responsibilities to a successful conclusion. Eager to use all my skills to the fullest to achieve the goals set by the organization.
                 </p>
             </div>
 
@@ -121,15 +121,15 @@
 
             <section class="section-tab-content mix exp-content" data-order="2">
                 <div class="exp-card">
-                    <div class="job">XYZ Designer</div>
-                    <div class="company">Company XYZ | <span class="time">Jan 20XX - Mar 20XX</span></div>
-                    <div class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate fugiat iure voluptas veritatis soluta! Asperiores exercitationem aliquid repellat molestias! Omnis, hic amet aliquid error quae voluptatibus rerum ipsa asperiores odio.</div>
+                    <div class="job">Vice President</div>
+                    <div class="company">IT Students Association | <span class="time">April 2023 - Mar 2024</span></div>
+                    <div class="paragraph">Serving as the Vice President provides a unique platform to exercise and enhance my leadership skills. It's a role that allows me to guide and inspire my peers, fostering a sense of unity and purpose within the student body.</div>
                 </div>
 
                 <div class="exp-card">
-                    <div class="job">XYZ Designer</div>
-                    <div class="company">Company XYZ | <span class="time">Jan 20XX - Mar 20XX</span></div>
-                    <div class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate fugiat iure voluptas veritatis soluta! Asperiores exercitationem aliquid repellat molestias! Omnis, hic amet aliquid error quae voluptatibus rerum ipsa asperiores odio.</div>
+                    <div class="job">Documentation Executive</div>
+                    <div class="company">IT Students Association | <span class="time">Jan 2022 - Mar 2023</span></div>
+                    <div class="paragraph">Being at the forefront of documentation allows me to ensure clear and concise communication. It's satisfying to know that my work aids in delivering information accurately and effectively.</div>
                 </div>
 
 
@@ -146,7 +146,7 @@
                             <li>Html</li>
                             <li>Css</li>
                             <li>JavaScript</li>
-                            <li>Java</li>
+                            <li>Perl</li>
                             <li>Python</li>
                         </ul>
                     </div>
@@ -156,7 +156,7 @@
                             <h3>Backend Tools</h3>
                         </div>
                         <ul class="skills">
-                            <li>Django</li>
+                            <li>Flutter</li>
                             <li>MongoDB</li>
                             <li>Express.js</li>
                             <li>Node.js</li>
@@ -172,7 +172,7 @@
                             <li>Effective Communication</li>
                             <li>Strong Trouble shooting skills</li>
                             <li>Team Managment</li>
-                            <li>Good Team Player</li>
+                            <li>Leadership</li>
                             <li>Well - Organised</li>
                         </ul>
                     </div>
@@ -182,14 +182,14 @@
             <section class="section-tab-content mix awards-content" data-order="4">
                 <div class="award-container">
                     <div class="award-card">
-                        <div class="title">ABCD</div>
-                        <div class="date">issued on: Aug 20XX - expires on: NOV 20XX</div>
+                        <div class="title">Colloquim'23</div>
+                        <div class="date">issued on: Aug 2022</div>
                         <a href="" class="verify">Verify my Credential</a>
                     </div>
 
                     <div class="award-card">
-                        <div class="title">ABCD</div>
-                        <div class="date">issued on: Aug 20XX - expires on: NOV 20XX</div>
+                        <div class="title">Book Review Competition</div>
+                        <div class="date">issued on: NOV 2021</div>
                         <a href="" class="verify">Verify my Credential</a>
                     </div>
 
@@ -227,14 +227,12 @@
 
             <section class="section-tab-content mix contact-content" data-order="5">
                 <div class="contact-container">
-                    <div class="contact-map">
-                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d31883.04593938272!2d80.61215473896671!3d16.51381787725219!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a35eff9482d944b%3A0x939b7e84ab4a0265!2sVijayawada%2C%20Andhra%20Pradesh%2C%20India!5e0!3m2!1sen!2sru!4v1699854326050!5m2!1sen!2sru" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-                    </div>
+                    
                     <div class="contact-box">
                         <div class="contact-links">
                             <h3>Follow Me</h3>
                             <div class="text">
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae quidem cupiditate rem ullam sapiente voluptatum asperiores molestiae ducimus, numquam quia labore laudantium, beatae, quasi suscipit. Ipsam ullam ut nulla quas.
+                                To know more about my projects, current work progress and skills gained.
                             </div>
                             <ul class="links">
                                 <li><a href="#"><i class="uil uil-instagram"></i></a></li>
@@ -262,7 +260,7 @@
     </div>
     <footer>
         <div class="copy-right">
-            <p>&copy; All Rights reserved | Phaneendra Nikhil 2023</p>
+            <p>&copy; Developed by Bibin John</p>
         </div>
     </footer>
     <script src="mix/dist/mixitup.min.js"></script>
